grammar.js
    source_file: ($) => repeat($._element),

    _element: ($) =>
      choice(
        $.package_declaration,
        $.namespace_declaration,
        $._declaration,
        $.feature_usage,
        $.import_statement,
        $.alias_declaration,
        $.comment_element,
        $.doc_comment,
        $.satisfy_statement,
        $.filter_statement,
        $.metadata_annotation,
        $.assignment_statement,
        $.textual_representation,
        $.connect_statement,
        $.assert_statement,
        $.expression_statement,
        $.multiplicity_definition,
        $._statement,
      ),

    // =================================================================
    // Declaration wrapper — the key optimization.
    // ONE rule handles the modifier prefix, then dispatches to the
    // specific definition or usage type based on the keyword.
    // =================================================================

    package_declaration: ($) =>
      seq(
        optional($.visibility),
        optional(choice(seq("standard", "library"), "library")),
        "package",
        optional($.short_name),
        field("name", $.identifier),
        choice($.package_body, ";"),
      ),

    package_body: ($) => seq("{", repeat($._element), "}"),

    // --- Namespace (KerML bare namespace without def) ---

    import_statement: ($) =>
      seq(
        optional($.visibility),
        "import",
        optional("all"),
        $.qualified_name,
        optional(token(seq("::", "*"))),
        optional(token(seq("::", "**"))),
        optional($.import_filter),
        choice($._body, ";"),
      ),

    definition: ($) =>
      seq(
        $._def_keyword,
        "def",
        optional($.short_name),
        optional(field("name", $.identifier)),
        optional($._type_relationships),
        choice($.definition_body, ";"),
      ),

    _def_keyword: ($) =>
      choice(
        "part", "action", "port", "attribute", "item",
        "requirement", "constraint", "view", "viewpoint", "rendering",
        "concern", "allocation", "interface", "occurrence", "metadata",
        "calc", "case", "class", "struct", "behavior", "datatype",
        "feature", "function", "predicate", "connector", "interaction",
        "type", "namespace", "classifier", "metaclass", "expr", "step",
        seq("flow", optional("connection")),
        seq(optional("flow"), "connection"),
        seq("use", "case"),
        seq("analysis", optional("case")),
        seq("verification", optional("case")),
        "individual",
        seq("assoc", optional("struct")),
      ),

    definition_body: ($) =>
      seq("{", repeat($._body_element), optional($.result_expression), "}"),

    usage: ($) =>
      seq(
        $._usage_keyword,
        optional($.short_name),
        optional(field("name", $.identifier)),
        optional($.multiplicity),
        optional($._type_relationships),
        optional($.multiplicity),
        repeat($._feature_qualifier),
        optional($._type_relationships),
        optional($.value_assignment),
        optional($.metadata_annotation_list),
        choice($._body, ";"),
      ),

    _usage_keyword: ($) =>
      choice(
        "part", "attribute", "port", "item", "occurrence",
        "calc", "view", "viewpoint", "rendering", "concern",
        "analysis", "verification", "enum",
        "message", "case",
        "classifier", "metaclass", "expr", "step",
        seq("use", "case"),
        seq("snapshot", optional(choice("item", "part"))),
        seq("timeslice", optional(choice("item", "part"))),
      ),

    feature_usage: ($) =>
      choice(
        // With at least one modifier or metadata prefix
        seq(
          repeat1(choice($._prefix_metadata, $._modifier)),
          optional(field("name", $.identifier)),
          optional($._type_relationships),
          optional($.multiplicity),
          repeat($._feature_qualifier),
          optional($._type_relationships),
          optional($.value_assignment),
          choice($._body, ";"),
        ),
        // Without prefix: name and type are required
        seq(
          field("name", $.identifier),
          $._type_relationships,
          optional($.multiplicity),
          repeat($._feature_qualifier),
          optional($._type_relationships),
          optional($.value_assignment),
          choice($._body, ";"),
        ),
      ),

    // --- Connection-related usages ---

    loop_action: ($) =>
      seq(
        "loop",
        optional("action"),
        optional(field("name", $.identifier)),
        optional($._type_relationships),
        choice(
          seq($._body, optional(seq("until", $._expression, ";"))),
          seq("until", $._expression, $._body),
          seq("until", $._expression, ";"),
          ";",
        ),
      ),

    _body: ($) => $.definition_body,

    _body_element: ($) =>
      choice(
        $.package_declaration,
        $._declaration,
        $.feature_usage,
        $.import_statement,
        $.alias_declaration,
        $.comment_element,
        $.doc_comment,
        $.satisfy_statement,
        $.assert_statement,
        $.subject_declaration,
        $.actor_declaration,
        $.objective_declaration,
        $.filter_statement,
        $.metadata_annotation,
        $.bind_statement,
        $.verify_statement,
        $.connect_statement,
        $.interface_statement,
        $.allocate_statement,
        $.message_statement,
        $.flow_statement,
        $.dependency_statement,
        $.redefinition_statement,
        $.standalone_redefines,
        $.require_statement,
        $.return_statement,
        $.render_statement,
        $.expose_statement,
        $.stakeholder_declaration,
        $.frame_statement,
        $.expression_statement,
        $.assignment_statement,
        $.terminate_statement,
        $.inline_transition,
        $.textual_representation,
        $.multiplicity_definition,
        // State-related actions can appear in definition bodies too
        $.entry_action,
        $.do_action,
        $.exit_action,
        // Standalone member feature (e.g. `member feature 'public' : VisibilityKind;`)
        $.member_feature,
        // Bind statement (e.g. `bind start = done;`)
        $.bind_statement,
      ),

    render_statement: ($) =>
      seq("render",
          optional("rendering"),
          $._feature_ref,
          optional($._type_relationships),
          optional($.multiplicity),
          ";"),

    expose_statement: ($) =>
      seq(
        optional($.visibility),
        "expose",
        $.qualified_name,
        optional(token(seq("::", "*"))),
        optional(token(seq("::", "**"))),
        optional($.import_filter),
        choice($._body, ";"),
      ),

    stakeholder_declaration: ($) =>
      seq("stakeholder", optional(field("name", $.identifier)),
          optional($._type_relationships),
          optional($.multiplicity),
          optional($.value_assignment), choice($._body, ";")),

    frame_statement: ($) =>
      seq("frame", optional("concern"),
          optional(field("name", $.identifier)),
          optional($._type_relationships),
          optional($.multiplicity),
          optional($.value_assignment), choice($._body, ";")),

    expression_statement: ($) =>
      seq($._expression, ";"),

    // --- Type relationships ---

    _type_relationships: ($) =>
      repeat1($._type_relationship),

    typed_by: ($) =>
      seq(optional("~"), commaSep1(field("type", $.qualified_name))),

    // Keyword-based type relationships — unified
    inverse_keyword: ($) =>
      seq("inverse", "of", field("target", $._feature_ref)),

    multiplicity: ($) =>
      seq("[", choice("*", seq($._expression, optional(seq("..", choice("*", $._expression))))), "]",
          optional(choice(
            seq("ordered", optional("nonunique")),
            seq("nonunique", optional("ordered")),
          ))),

    // Standalone multiplicity definition (e.g. `multiplicity exactlyOne [1..1] { }`)
    _feature_qualifier: ($) =>
      choice("nonunique", "ordered"),

    value_assignment: ($) =>
      choice(
        seq(choice("=", ":=", seq("default", choice("=", ":="))), $._expression),
        seq("default", $._expression),
        seq("default", $._body),
      ),

    _prefix_metadata: ($) =>
      $.hash_tag,

    visibility: ($) => choice("public", "private", "protected"),

    // --- Modifiers ---

    _modifier: ($) =>
      choice(
        $.visibility,
        "abstract",
        "variation",
        "variant",
        "individual",
        "readonly",
        "derived",
        "nonunique",
        "ordered",
        "in",
        "out",
        "inout",
        "composite",
        "conjugate",
        "const",
        "constant",
        "disjoint",
        "portion",
        "var",
        "ref",
      ),

    // --- Feature reference ---

    _feature_ref: ($) =>
      choice(
        $.qualified_name,
        $.feature_chain,
      ),

    // --- Expressions ---

    _expression: ($) =>
      choice(
        $.identifier,
        $.qualified_name,
        $.feature_chain,
        $.number_literal,
        $.string_literal,
        $.boolean_literal,
        $.null_literal,
        $.binary_expression,
        $.unary_expression,
        $.paren_expression,
        $.bracket_expression,
        $.index_expression,
        $.invocation_expression,
        $.new_expression,
        $.meta_expression,
        $.conditional_expression,
        $.select_expression,
        $.metadata_access_expression,
      ),

    binary_expression: ($) =>
      choice(
        // null coalescing
        prec.right(0, seq($._expression, "??", $._expression)),
        // implies — lowest precedence, right-associative
        prec.right(1, seq($._expression, "implies", $._expression)),
        // or, xor
        prec.left(2, seq($._expression, choice("or", "|", "xor", "^"), $._expression)),
        // and
        prec.left(3, seq($._expression, choice("and", "&"), $._expression)),
        // equality
        prec.left(4, seq($._expression, choice("==", "!=", "===", "!=="), $._expression)),
        // comparison
        prec.left(5, seq($._expression, choice("<", ">", "<=", ">="), $._expression)),
        // additive
        prec.left(6, seq($._expression, choice("+", "-"), $._expression)),
        // multiplicative
        prec.left(7, seq($._expression, choice("*", "/", "%"), $._expression)),
        // exponentiation — right-associative
        prec.right(8, seq($._expression, "**", $._expression)),
        // type operators
        prec.left(9, seq($._expression, choice("hastype", "istype", "as"), $._expression)),
        // collect/select arrow with body
        prec.left(10, seq($._expression, "->", $.identifier, "{", repeat(choice($._body_element, $._expression)), "}")),
        // collect/select arrow with invocation
        prec.left(10, seq($._expression, "->", $.identifier, "(", commaSep($._argument), ")")),
        // collect/select arrow with quoted name
        prec.left(10, seq($._expression, "->", $.identifier, $.quoted_identifier)),
        // collect/select arrow with function reference (e.g. ->reduce RealFunctions::'+')
        prec.left(10, seq($._expression, "->", $.identifier, $._feature_ref)),
        // collect/select arrow (plain)
        prec.left(10, seq($._expression, "->", $._expression)),
        // member access — highest
        prec.left(11, seq($._expression, choice(".", "::"), $._expression)),
      ),

    unary_expression: ($) =>
      prec(12, seq(choice("not", "-", "~", "all"), $._expression)),

    paren_expression: ($) =>
      choice(
        seq("(", $._expression, "..", $._expression, ")"),
        seq("(", commaSep1($._expression), ")"),
        seq("(", ")"),
      ),

    bracket_expression: ($) =>
      prec.left(1, seq($._expression, "[", $._expression, "]")),

    index_expression: ($) =>
      prec(3, seq($._expression, "#", "(", $._expression, ")")),

    _argument: ($) =>
      choice(
        seq($.identifier, "=", $._expression),
        $._expression,
      ),

    conditional_expression: ($) =>
      prec.right(1, seq(
        "if", $._expression,
        "?", $._expression,
        "else", $._expression,
      )),

    // --- Names ---

    qualified_name: ($) =>
      prec.left(choice(
        seq($.identifier, repeat(seq("::", $.identifier))),
        seq("$", repeat1(seq("::", $.identifier))),
      )),

    feature_chain: ($) =>
      prec.left(
        seq(choice($.qualified_name, $.identifier), repeat1(seq(".", $.identifier))),
      ),

    _word: ($) => /[A-Za-z_][A-Za-z0-9_]*/,

    identifier: ($) => choice(
      $._word,
      $.quoted_identifier,
    ),

    number_literal: ($) =>
      token(choice(
        /[0-9]+(\.[0-9]+)?([eE][+-]?[0-9]+)?/,
        /\.[0-9]+([eE][+-]?[0-9]+)?/,
        /0[xX][0-9a-fA-F]+/,
      )),

    string_literal: ($) =>
      token(seq('"', repeat(choice(/[^"\\]/, /\\./)), '"')),

    boolean_literal: ($) => choice("true", "false"),

    null_literal: ($) => "null",

    // --- Comments ---
